# dockyard2sail-py

./: .dockerignore  .gitignore  .trivyignore.yaml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
specs/: add-license-file.md  branch-protection-main.md  configurable-cors.md  dependabot-config.md  dockerfile-dev-pin-policy.md  dockerfile-healthcheck-digest-pin.md  enforce-coverage-threshold.md  explicit-ruff-format-config.md  git-hooks-ruff-precommit.md  global-exception-handler.md  hexagonal-architecture-scaffolding.md  mypy-static-typecheck-ci.md  poetry-lockfile-check-ci.md  rewrite-claude-md.md  self-documenting-docker-first-makefile.md  trivy-scan-ci.md  typed-settings-pydantic.md  version-from-package-metadata.md
src/app/: config.py  main.py
src/app/api/: routes.py
src/app/domain/: ports.py
src/app/services/: payment_service.py
tests/: test_architecture.py  test_config.py  test_main.py
