[tool.poetry]
name = "dockyard2sail-py"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.115.7"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
starlette = ">=0.49.1"
pydantic-settings = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.28.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
ruff = "^0.9.0"
mypy = "^1.14.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov-fail-under=90"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"
